# RauCasting

./: .gitignore  CMakeLists.txt  output.ppm
headers/: Geometry.h  Object.h  Painter.h  Player.h  Point.h  RGB.h
src/: Geometry.cpp  Object.cpp  Painter.cpp  raycasting.cpp
