cmake_minimum_required(VERSION 3.7)
project(Game)
	set(CMAKE_CXX_FLAGS "-g")
	set(SOURCE_EXE src/raycasting.cpp)
	set(IMG_SOURCE_LIB src/Painter.cpp)
	set(GM_SOURCE_LIB src/Geometry.cpp)
	set(OBJ_SOURCE_LIB src/Object.cpp)
	add_library(Painter STATIC ${IMG_SOURCE_LIB})
	add_library(Geometry STATIC ${GM_SOURCE_LIB})
	add_library(Object STATIC ${OBJ_SOURCE_LIB})
	add_executable(main ${SOURCE_EXE})
	target_link_libraries(main Painter Geometry Object)
